--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -4,6 +4,8 @@ on:
     branches: [master, development]
   pull_request:
   workflow_dispatch:
+  schedule:
+    - cron: '0 1 * * *'
 
 jobs:
   compile-mudlet:
