Build Mudlet PTB, but don't autodeploy (#4674)
* Build Mudlet PTB, but don't autodeploy

* Fix macOS artifact upload name

* Don't attempt to register release in dblsqd

* Cleanup - remove version faking

--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -60,7 +60,6 @@ jobs:
         dir: ${{runner.workspace}}
         arch: win64_mingw73 # this key is relevant only for windows
         cached: ${{steps.cache-qt.outputs.cache-hit}}
-        mirror: http://mirrors.ocf.berkeley.edu/qt/
 
     - name: Checkout Mudlet source code
       uses: actions/checkout@v2
@@ -76,7 +75,7 @@ jobs:
       with:
         vcpkgArguments: '@${{env.vcpkgResponseFile}}'
         vcpkgDirectory: '${{github.workspace}}/3rdparty/vcpkg'
-        appendedCacheKey: ${{hashFiles(env.vcpkgResponseFile)}}-cachekey
+        appendedCacheKey: ${{hashFiles(env.vcpkgResponseFile)}}-aakey
 
     - name: (macOS) Install non-vcpkg dependencies
       if: runner.os == 'macOS'
@@ -87,7 +86,7 @@ jobs:
         HOMEBREW_NO_INSTALL_CLEANUP: "ON"
       run: |
         # these aren't available or don't work well in vcpkg
-        brew install pkg-config libzzip libzip ccache luarocks
+        brew install pkg-config libzzip libzip ccache luarocks expect
 
         echo "/usr/local/opt/ccache/libexec" >> $GITHUB_PATH
         echo "CCACHE_DIR=${{runner.workspace}}/ccache" >> $GITHUB_ENV
@@ -114,7 +113,7 @@ jobs:
       run: |
         # Install from vcpkg everything we can for cross-platform consistency
         # If not available, use other methods
-        sudo apt-get install ccache pkg-config pcregrep luarocks libzip-dev libglu1-mesa-dev libpulse-dev -y
+        sudo apt-get install ccache pkg-config pcregrep luarocks expect libzip-dev libglu1-mesa-dev libpulse-dev -y
 
         # multiple versions of GCC available in Actions - update to latest
         sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 9
@@ -252,12 +251,38 @@ jobs:
         if [ "${RUNNER_OS}" = "Linux" ]; then
           sudo apt-get install libgstreamer-plugins-base1.0-0 -y
         fi
+      env:
+        BUILD_FOLDER: ${{runner.workspace}}/b/ninja
+        RUNNER_OS: ${{runner.os}}
+        DEPLOY: ${{matrix.deploy}}
+        DBLSQD_USER: ${{secrets.DBLSQD_USER}}
+        DBLSQD_PASS: ${{secrets.DBLSQD_PASS}}
+        DEPLOY_KEY_PASS: ${{secrets.DEPLOY_KEY_PASS}}
 
+
+    # - name: Setup tmate session for debugging
+    #   if: (runner.os == 'Linux' || runner.os == 'macOS') && matrix.deploy == 'deploy'
+    #   uses: mxschmitt/action-tmate@v3
+    #   env:
+    #     BUILD_FOLDER: ${{runner.workspace}}/b/ninja
+    #     RUNNER_OS: ${{runner.os}}
+    #     DEPLOY: ${{matrix.deploy}}
+    #     DBLSQD_USER: ${{secrets.DBLSQD_USER}}
+    #     DBLSQD_PASS: ${{secrets.DBLSQD_PASS}}
+    #     DEPLOY_KEY_PASS: ${{secrets.DEPLOY_KEY_PASS}}
+
+
+    - name: (Linux/macOS) package Mudlet
+      if: (runner.os == 'Linux' || runner.os == 'macOS') && matrix.deploy == 'deploy'
+      run: |
         ${{github.workspace}}/CI/travis.after_success.sh
       env:
         BUILD_FOLDER: ${{runner.workspace}}/b/ninja
         RUNNER_OS: ${{runner.os}}
         DEPLOY: ${{matrix.deploy}}
+        DBLSQD_USER: ${{secrets.DBLSQD_USER}}
+        DBLSQD_PASS: ${{secrets.DBLSQD_PASS}}
+        DEPLOY_KEY_PASS: ${{secrets.DEPLOY_KEY_PASS}}
 
     - name: Upload packaged Mudlet
       uses: actions/upload-artifact@v2
