Map Info contributors - adjustable map info (#4718)
* initial changes form map info overrides

* code styling fix

* fix code style

* add api to toggle map info providers
validation of arguments
turn off 2d buttons on 3d map
remove obsolte map info references

* change naming
make qmake build work

* set short map info as default

* use default color if wrong or not complete value is provided

* cr fixes

* replace toggle with enable and disable api

* order of contributors is order of insertion

* add missing changes

* apply code review changes
minor improvements

* legacy setting 'showInfo' will be stored according to contributors state

* fix seg fault
untangle includes

* fix another seg fault
fix reregistering map info contributor

* mapInfo will be based solely on map contributors
XmlImport will set legacy full info if first running old progile

* do not store map info unless mapContributors are empty

* cr adjustments
adjust to new validation in lua interpreter
make gap smaller between providers

* Update src/dlgMapper.cpp

Co-authored-by: Vadim Peretokin <vperetokin@gmail.com>

* remove unintentional change

* add error handling for map info callback functions

Co-authored-by: Piotr Wilczynski <piotr.wilczynski@bisnode.com>
Co-authored-by: Vadim Peretokin <vperetokin@gmail.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -80,6 +80,7 @@ set(mudlet_SRCS
     KeyUnit.cpp
     LuaInterface.cpp
     main.cpp
+    mapInfoContributorManager.cpp
     mudlet.cpp
     ScriptUnit.cpp
     T2DMap.cpp
@@ -211,6 +212,7 @@ set(mudlet_HDRS
     ircmessageformatter.h
     KeyUnit.h
     LuaInterface.h
+    mapInfoContributorManager.h
     mudlet.h
     post_guard.h
     pre_guard.h
