Restore compatibility with macOS 10.14 (#4793)
* Set XCode to 11.3 which is what we used in Travis

* Set CMAKE_OSX_DEPLOYMENT_TARGET correctly

* Correct CMakeLists

* Fix syntax

* Up to latest available XCode

--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -139,6 +139,9 @@ jobs:
         echo "LUA_PATH=$LUA_PATH" >> $GITHUB_ENV
         echo "LUA_CPATH=$LUA_CPATH" >> $GITHUB_ENV
 
+        # Use latest available XCode
+        echo "DEVELOPER_DIR=/Applications/Xcode_12.4.app/Contents/Developer" >> $GITHUB_ENV
+
     - name: (Linux) Install non-vcpkg dependencies
       if: runner.os == 'Linux'
       run: |
