Fix macOS PTB updates(#4884)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -450,7 +450,7 @@ if(APPLE)
   set_target_properties(mudlet PROPERTIES
     MACOSX_BUNDLE ON
     MACOSX_BUNDLE_BUNDLE_NAME Mudlet
-    MACOSX_BUNDLE_BUNDLE_VERSION ${APP_VERSION}
+    MACOSX_BUNDLE_BUNDLE_VERSION ${APP_VERSION}${APP_BUILD}
     MACOSX_BUNDLE_GUI_IDENTIFIER org.mudlet.mudlet
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${APP_VERSION}
   )
