--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -57,8 +57,10 @@ set(mudlet_SRCS
     dlgIRC.cpp
     dlgKeysMainArea.cpp
     dlgMapper.cpp
+    dlgModuleManager.cpp
     dlgNotepad.cpp
     dlgPackageExporter.cpp
+    dlgPackageManager.cpp
     dlgProfilePreferences.cpp
     dlgRoomExits.cpp
     dlgRoomSymbol.cpp
@@ -160,8 +162,10 @@ set(mudlet_UIS
     ui/irc.ui
     ui/keybindings_main_area.ui
     ui/main_window.ui
+    ui/module_manager.ui
     ui/mapper.ui
     ui/notes_editor.ui
+    ui/package_manager.ui
     ui/profile_preferences.ui
     ui/room_exits.ui
     ui/room_symbol.ui
@@ -190,8 +194,10 @@ set(mudlet_HDRS
     dlgIRC.h
     dlgKeysMainArea.h
     dlgMapper.h
+    dlgModuleManager.h
     dlgNotepad.h
     dlgPackageExporter.h
+    dlgPackageManager.h
     dlgProfilePreferences.h
     dlgRoomExits.h
     dlgRoomSymbol.h
