Fix Linux packaging (#4979)

--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -275,9 +275,9 @@ jobs:
         run-luarocks install --local argparse
         run-luarocks install --local lunajson
 
-        # necessary for Qt multimedia
+        # necessary for Qt multimedia and modern Qt
         if [ "${RUNNER_OS}" = "Linux" ]; then
-          sudo apt-get install libgstreamer-plugins-base1.0-0 -y
+          sudo apt-get install libgstreamer-plugins-base1.0-0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-render-util0 libxcb-xinerama0 -y
         fi
 
         ${{github.workspace}}/CI/travis.after_success.sh
