--- a/.github/workflows/clangtidy-diff-analysis.yml
+++ b/.github/workflows/clangtidy-diff-analysis.yml
@@ -1,6 +1,10 @@
 name: 🔍 Check improvements with Mudlet's C++ style guide
 
-on: pull_request_target
+on:
+  pull_request_target:
+    paths:
+    - '**.cpp'
+    - '**.h'
 
 jobs:
   compile-mudlet:
