Run builds on the 'main' branch as well (#5215)

--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -1,7 +1,7 @@
 name: 🔨 Build Mudlet
 on:
   push:
-    branches: [master, development]
+    branches: [main, development]
   pull_request:
   workflow_dispatch:
   schedule:
