Backport fixes made to release process for 4.11 (#5258)

--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -1,7 +1,8 @@
 name: 🔨 Build Mudlet
 on:
   push:
-    branches: [main, development]
+    branches: [master, development, release-*]
+    tags: [Mudlet-*]
   pull_request:
   workflow_dispatch:
   schedule:
