Enable analysis to be run manually

--- a/.github/workflows/clangtidy-diff-analysis.yml
+++ b/.github/workflows/clangtidy-diff-analysis.yml
@@ -6,6 +6,7 @@ on:
     - '**.cpp'
     - '**.h'
     - '.github/workflows/clangtidy-diff-analysis.yml'
+  workflow_dispatch:
 
 jobs:
   compile-mudlet:
