Revert "Remove apostrophe from workflow name"
This reverts commit 2c8a41bf1b63faf0d0b2065eb1602ab936ef51c7.

--- a/.github/workflows/clangtidy-diff-analysis.yml
+++ b/.github/workflows/clangtidy-diff-analysis.yml
@@ -1,4 +1,4 @@
-name: "Check improvements with C++ style guide"
+name: "Check improvements with Mudlet's C++ style guide"
 
 on:
   pull_request_target:
