--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -246,11 +246,21 @@ jobs:
         restore-keys: ccache-${{matrix.os}}-${{matrix.compiler}}-${{matrix.qt}}
       if: matrix.os != 'windows-latest'
 
-    - name: (Linux/macOS) Set build info
-      if: runner.os == 'Linux' || runner.os == 'macOS'
+    - name: (Linux) Set build info
+      if: runner.os == 'Linux'
       run: |
+        sudo apt-get -y install pcregrep
         ${{github.workspace}}/CI/travis.validate_deployment.sh
         ${{github.workspace}}/CI/travis.set-build-info.sh
+
+    - name: (macOS) Set build info
+      if: runner.os == 'macOS'
+      run: |
+        brew install pcre
+        ${{github.workspace}}/CI/travis.validate_deployment.sh
+        ${{github.workspace}}/CI/travis.set-build-info.sh
+        # remove it as it breaks packaging down the line: https://github.com/Mudlet/Mudlet/issues/6668
+        brew uninstall pcre
 
     - name: (Linux/macOS) check ccache stats prior to build
       if: runner.os == 'Linux' || runner.os == 'macOS'
