--- a/.github/workflows/clangtidy-diff-analysis.yml
+++ b/.github/workflows/clangtidy-diff-analysis.yml
@@ -6,6 +6,7 @@ on:
     - '**.cpp'
     - '**.h'
     - '.github/workflows/clangtidy-diff-analysis.yml'
+  workflow_dispatch:
 
 jobs:
   compile-mudlet:
@@ -122,7 +123,7 @@ jobs:
           --target autogen
 
     - name: Check C++ changes against style guide
-      uses: ZedThree/clang-tidy-review@v0.12.0
+      uses: ZedThree/clang-tidy-review@v0.12.1
       id: static_analysis
       with:
         build_dir: 'b/ninja' # path is relative to checkout directory
