--- a/.github/workflows/clangtidy-diff-analysis.yml
+++ b/.github/workflows/clangtidy-diff-analysis.yml
@@ -1,4 +1,4 @@
-name: "Check improvements with C++ style guide"
+name: "Check improvements with cpp style guide"
 
 on:
   pull_request_target:
@@ -6,7 +6,6 @@ on:
     - '**.cpp'
     - '**.h'
     - '.github/workflows/clangtidy-diff-analysis.yml'
-  workflow_dispatch:
 
 jobs:
   compile-mudlet:
