--- a/.github/workflows/clangtidy-diff-analysis.yml
+++ b/.github/workflows/clangtidy-diff-analysis.yml
@@ -128,8 +128,14 @@ jobs:
         build_dir: 'b/ninja' # path is relative to checkout directory
         exclude: '3rdparty'
         config_file: '.clang-tidy'
-        # the action doesn't see system-level libraries, need to replicate them here
-        apt_packages: 'pkg-config,libzip-dev,libglu1-mesa-dev,libpulse-dev'
+        # the action doesn't see system-level or vcpkg libraries, need to replicate them here
+        apt_packages: 'zlib1g-dev, libhunspell-dev,
+          libpcre3-dev, libzip-dev, libboost-dev, libboost-all-dev, libyajl-dev, libpulse-dev, libpugixml-dev,
+          liblua5.1-0-dev, lua-filesystem, lua-zip, lua-sql-sqlite3, luarocks, ccache, lua5.1,
+          libglu1-mesa-dev, mesa-common-dev, libglib2.0-dev, libgstreamer1.0-dev, libqt5opengl5-dev,
+          qtmultimedia5-dev, qttools5-dev, qt5keychain-dev, libsecret-1-dev,
+          libqt5texttospeech5-dev, qtspeech5-flite-plugin, qtspeech5-speechd-plugin,
+          qtbase5-dev, qtchooser, qt5-qmake, qtbase5-dev-tools, qtmultimedia5-dev'
         split_workflow: true
 
     - name: Upload check results
