--- a/.github/workflows/clangtidy-diff-analysis.yml
+++ b/.github/workflows/clangtidy-diff-analysis.yml
@@ -1,4 +1,4 @@
-name: "Check improvements with cpp style guide"
+name: "🔍 Check improvements with Mudlet's cpp style guide"
 
 on:
   pull_request_target:
