Properly configure feedback to be posted as annotations

--- a/.github/workflows/clangtidy-post-comments.yml
+++ b/.github/workflows/clangtidy-post-comments.yml
@@ -12,3 +12,6 @@ jobs:
 
     steps:
       - uses: ZedThree/clang-tidy-review/post@v0.12.2
+        with:
+          # post comments instead of annotations - limited to just 10 however
+          annotations: true
