Infrastructure: post clangtidy feedback as annotations (#6707)
<!-- Keep the title short & concise so anyone non-technical can
understand it,
     the title appears in PTB changelogs -->
#### Brief overview of PR changes/additions
Post clangtidy feedback as annotations
#### Motivation for adding to Mudlet
Better DevEx
#### Other info (issues closed, discussion etc)
These options [should be
set](https://github.com/ZedThree/clang-tidy-review/issues/77) on the
workflow posting the comments, not the one doing the review

--- a/.github/workflows/clangtidy-diff-analysis.yml
+++ b/.github/workflows/clangtidy-diff-analysis.yml
@@ -128,13 +128,9 @@ jobs:
         build_dir: 'b/ninja' # path is relative to checkout directory
         exclude: '3rdparty'
         config_file: '.clang-tidy'
-        # the action doesn't see system-level libraries need to replicate them here
+        # the action doesn't see system-level libraries, need to replicate them here
         apt_packages: 'gettext, pkg-config, libzip-dev, libglu1-mesa-dev, libpulse-dev'
         split_workflow: true
-        # don't post any comments if the PR is fine
-        lgtm_comment_body: ''
-        # post comments instead of annotations - limited to just 10 however
-        annotations: true
 
     - name: Upload check results
       uses: ZedThree/clang-tidy-review/upload@v0.12.2
