--- a/.github/workflows/clangtidy-post-comments.yml
+++ b/.github/workflows/clangtidy-post-comments.yml
@@ -12,3 +12,8 @@ jobs:
 
     steps:
       - uses: ZedThree/clang-tidy-review/post@v0.12.2
+        with:
+          # don't post any comments if the PR is fine
+          lgtm_comment_body: ''
+          # post comments instead of annotations - limited to just 10 however
+          annotations: true
