--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -525,8 +525,9 @@ target_link_libraries(
         PUGIXML::PUGIXML
         ZIP::ZIP
         ZLIB::ZLIB
-        ${QT_LIBS}
-        nanobench)
+# PLACEMARKER: sample benchmarking code
+#       nanobench
+        ${QT_LIBS})
 
 if(USE_UPDATER)
   target_link_libraries(mudlet dblsqd)
