Comment out missed cmake call

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -180,8 +180,7 @@ git_submodule_init(
 #     GIT_REPOSITORY https://github.com/martinus/nanobench.git
 #     GIT_TAG v4.3.11
 #     GIT_SHALLOW TRUE)
-
-FetchContent_MakeAvailable(nanobench)
+# FetchContent_MakeAvailable(nanobench)
 
 if(USE_UPDATER)
   git_submodule_init(CHECK_FILE "3rdparty/dblsqd/CMakeLists.txt" SUBMODULE_PATH
