--- a/.github/workflows/update-autocompletion.yml
+++ b/.github/workflows/update-autocompletion.yml
@@ -49,18 +49,17 @@ jobs:
         echo ::set-output name=lines_changed::$lines_changed
 
     - name: send in a pull request
-      uses: gr2m/create-or-update-pull-request-action@v1.x
+      uses: peter-evans/create-pull-request@v5
       if: steps.getdiff.outputs.lines_changed > 0
-      env:
-        GITHUB_TOKEN: ${{ secrets.GH_PAT_UPDATE_3RDPARTY }}
       with:
+        token: ${{ secrets.GH_PAT_UPDATE_3RDPARTY }}
+        add-paths: src/
+        branch: update-autocompletion-data
+        commit-message: (autocommit) Updated autocompletion data
         title: "Infrastructure: Update autocompletion data in Mudlet"
         body: |
           #### Brief overview of PR changes/additions
           :crown: An automated PR to update autocompletion data in Mudlet from ${{ github.ref }} (${{ github.sha }}).
           #### Motivation for adding to Mudlet
           So autocompletion works as expected.
-        branch: update-autocompletion-data-${{ github.sha }}
-        path: src/
-        commit-message: (autocommit) Updated autocompletion data
-        author: "mudlet-machine-account <mudlet-machine-account@users.noreply.github.com>"
+        author: mudlet-machine-account <mudlet-machine-account@users.noreply.github.com>
